# reactpy-material

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
js/: .eslintrc.json  package-lock.json  package.json  rollup.config.js
js/src/: index.js
reactpy_material/: __init__.py  bundle.js  core.py
reactpy_material/core/: components.py  data_display.py  feedback.py  layout.py  navigation.py  surfaces.py  utils.py
requirements/: build-docs.txt  check-style.txt  check-types.txt  pkg-deps.txt  test-env.txt
samples/: components.py  generator_bug.py
samples/components/: button_group.py  chip.py  switch.py
samples/containers/: form_control.py  grid.py
samples/data_display/: datagrid.py  icons.py  table.py  typography.py
samples/feeback/: alert.py  progress.py
samples/navigation/: menu.py  pagination.py  speed_dial.py  tabs.py
samples/surfaces/: accordion.py
